crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__nullary_constr.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (Constr 59 [])) of
  DataConstr payload#7 -> payload#7
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_8
    (force
      [[[[[[(force (builtin chooseData)) generated_8]
        (delay [(lam payload_7 payload_7) [(builtin unConstrData) generated_8]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (Constr 59 []))])
--- optimized Core
case@Data (con data (Constr 59 [])) of
  DataConstr payload#1 -> payload#1
  _ -> trace "cold" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam builtin_5
      [(lam partial_6
        [(lam generated_4
          (force
            [[[[[[builtin_5 generated_4]
              (delay [(lam payload_2 payload_2) [(builtin unConstrData) generated_4]])]
              (delay (force [partial_6 (delay (error))]))]
              (delay (force [partial_6 (delay (error))]))]
              (delay (force [partial_6 (delay (error))]))]
              (delay (force [partial_6 (delay (error))]))]))
          (con data (Constr 59 []))])
        [builtin_3 (con string "cold")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (Constr 59 [])) of
  DataConstr payload#7 -> payload#7
  _ -> trace "cold" in error
--- isolated folded Core
let payload#7 : pair int (list Data) = (con (pair integer (list data)) (59, [])) in
payload#7
--- isolated cleaned Core
(con (pair integer (list data)) (59, []))
--- isolated UPLC before
(program 1.1.0
  [(lam generated_8
    (force
      [[[[[[(force (builtin chooseData)) generated_8]
        (delay [(lam payload_7 payload_7) [(builtin unConstrData) generated_8]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (Constr 59 []))])
--- isolated UPLC after
(program 1.1.0 (con (pair integer (list data)) (59, [])))
--- result
(con (pair integer (list data)) (59, []))
--- logs
[]
