crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__shared_bytes.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#8 : Data = (con data (B #6e617368)) in
let alias#9 : Data = data#8 in
constr 0 data#8 (case@Data alias#9 of
  DataB payload#10 -> payload#10) (case@Data alias#9 of
  DataB payload#11 -> payload#11)
--- unoptimized UPLC
(program 1.1.0
  [(lam data_8
    [(lam alias_9
      (constr 0
        data_8
        [(lam generated_12
          (force
            [[[[[[(force (builtin chooseData)) generated_12] (delay (error))] (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay [(lam payload_10 payload_10) [(builtin unBData) generated_12]])]))
          alias_9]
        [(lam generated_13
          (force
            [[[[[[(force (builtin chooseData)) generated_13] (delay (error))] (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay [(lam payload_11 payload_11) [(builtin unBData) generated_13]])]))
          alias_9]))
      data_8])
    (con data (B #6e617368))])
--- optimized Core
constr 0 (con data (B #6e617368)) (con bytestring #6e617368) (con bytestring #6e617368)
--- optimized UPLC
(program 1.1.0
  (constr 0
    (con data (B #6e617368))
    (con bytestring #6e617368)
    (con bytestring #6e617368)))
--- isolated pass
--- isolated ANF input
let data#8 : Data = (con data (B #6e617368)) in
let alias#9 : Data = data#8 in
let anf#12 : bytes = case@Data alias#9 of
  DataB payload#10 -> payload#10 in
let anf#13 : bytes = case@Data alias#9 of
  DataB payload#11 -> payload#11 in
constr 0 data#8 anf#12 anf#13
--- isolated folded Core
let data_payload#14 : bytes = (con bytestring #6e617368) in
let data#8 : Data = (con data (B #6e617368)) in
let alias#9 : Data = data#8 in
let anf#12 : bytes = let payload#10 : bytes = data_payload#14 in
payload#10 in
let anf#13 : bytes = let payload#11 : bytes = data_payload#14 in
payload#11 in
constr 0 data#8 anf#12 anf#13
--- isolated cleaned Core
constr 0 (con data (B #6e617368)) (con bytestring #6e617368) (con bytestring #6e617368)
--- isolated UPLC before
(program 1.1.0
  [(lam data_8
    [(lam alias_9
      [(lam anf_12
        [(lam anf_13 (constr 0 data_8 anf_12 anf_13))
          [(lam generated_14
            (force
              [[[[[[(force (builtin chooseData)) generated_14] (delay (error))] (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay [(lam payload_11 payload_11) [(builtin unBData) generated_14]])]))
            alias_9]])
        [(lam generated_15
          (force
            [[[[[[(force (builtin chooseData)) generated_15] (delay (error))] (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay [(lam payload_10 payload_10) [(builtin unBData) generated_15]])]))
          alias_9]])
      data_8])
    (con data (B #6e617368))])
--- isolated UPLC after
(program 1.1.0
  (constr 0
    (con data (B #6e617368))
    (con bytestring #6e617368)
    (con bytestring #6e617368)))
--- result
(constr 0
  (con data (B #6e617368))
  (con bytestring #6e617368)
  (con bytestring #6e617368))
--- logs
[]
